<resources>
    <string name="app_name">Coworking</string>
    <string name="create_an_account">Create an Account</string>
    <string name="name">Name</string>
    <string name="createAccountButton">Create an account</string>
    <string name="existing_user">Existing User?</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="password">Pass</string>
    <string name="mobilenumber_or_email">Mobile or Email</string>
    <string name="login2">User Login</string>
    <string name="login3">Login</string>
    <string name="new_user">New User?</string>
    <string name="meeting_room">Meeting Room</string>
    <string name="book_work_station">Book Work Station</string>
    <string name="bookHistory">Book History</string>
    <string name="select_date">Select Date</string>
    <string name="selected_date">Selected Date</string>
    <string name="select_time">Select Time</string>
    <string name="selected_time">Selected Time</string>
    <string name="no_booking_history_available">No booking history available</string>
    <string name="book_history">Book History</string>
    <string name="confirm">Confirm</string>
</resources>