<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="284dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="57dp"
        android:text="@string/create_an_account"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/userName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TextSizeCheck" />

    <EditText
        android:id="@+id/userName"
        android:layout_width="329dp"
        android:layout_height="69dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/name"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/mobileNumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.5"
        android:autofillHints=""
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/mobileNumber"
        android:layout_width="329dp"
        android:layout_height="63dp"
        android:layout_marginTop="32dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="phone"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userName"
        tools:ignore="LabelFor"
        tools:text="Mobile Number" />

    <EditText
        android:id="@+id/emailId"
        android:layout_width="329dp"
        android:layout_height="63dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="36dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textEmailAddress"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mobileNumber"
        tools:ignore="LabelFor"
        tools:text="Email Id" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="226dp"
        android:layout_height="67dp"
        android:layout_marginBottom="120dp"
        android:text="@string/createAccountButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="149dp"
        android:layout_height="29dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="40dp"
        android:text="@string/existing_user"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerButton"
        app:layout_constraintVertical_bias="0.117"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/loginPage"
        android:layout_width="102dp"
        android:layout_height="48dp"
        android:layout_marginBottom="60dp"
        android:text="@string/login"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.082"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/registerButton"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="317dp"
        android:layout_height="57dp"
        android:ems="10"
        android:inputType="textPassword"
        android:text="Password"
        app:layout_constraintBottom_toTopOf="@+id/registerButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailId" />

</androidx.constraintlayout.widget.ConstraintLayout>