<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity3"
    tools:layout_editor_absoluteX="13dp"
    tools:layout_editor_absoluteY="-12dp">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="165dp"
        android:layout_height="53dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="36dp"
        android:gravity="center"
        android:text="@string/meeting_room"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bookStation"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/buttonHS"
        android:layout_width="209dp"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:text="@string/bookHistory"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.92"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/bookStation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="144dp"
        android:backgroundTint="#FFFFFF"
        android:contentDescription="@string/book_work_station"
        app:layout_constraintEnd_toStartOf="@+id/meetingRoom"
        app:layout_constraintHorizontal_bias="0.397"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <ImageButton
        android:id="@+id/meetingRoom"
        android:layout_width="151dp"
        android:layout_height="141dp"
        android:layout_marginEnd="36dp"
        android:backgroundTint="#FFFFFF"
        android:contentDescription="@string/meeting_room"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonHS"
        app:layout_constraintVertical_bias="0.118"
        app:srcCompat="@drawable/img_1"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="156dp"
        android:layout_height="70dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="56dp"
        android:gravity="center"
        android:text="@string/book_work_station"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView4"
        app:layout_constraintHorizontal_bias="0.103"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bookStation"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TextSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>